# RPVP

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  all_to_one  build.rs  compile_commands.json  flake.nix  lab_one.c  lab_one.cpp  lab_one.h  lab_two.c  lab_two.cpp  lab_two.h  lab_two.hpp  main.c  main.cpp  matrix  mpi  one_to_all  ring  second  six.cpp
.cache/clangd/index/: lab_one.cpp.AEE22553C7A90814.idx  lab_one.hpp.7EE555584E2B8A6A.idx  lab_three.cpp.35C4EFDCC286E01F.idx  lab_three.hpp.2486D0CBBFA8EC27.idx  lab_two.cpp.BD28FA42E915FEB8.idx  lab_two.hpp.BD2BA20BFA741D2D.idx  main.cpp.68C47471D1F70E20.idx
.github/workflows/: c-cpp.yml  rust.yml
include/: lab_one.hpp  lab_three.hpp  lab_two.hpp
src/: executor.rs  lab_one.cpp  lab_one.rs  lab_six.rs  lab_third.rs  lab_three.cpp  lab_two.cpp  lab_two.rs  main.cpp  main.rs  matrix.rs
